# Exercise-Journal

./: .breakpoints  Myungsan's exercise sample.txt  README.md  User.py  Workout.py  buildozer.spec  main.kv  main.py  pyproject.toml  tempCodeRunnerFile.py  todo.md  ui.kv  workout.py
.github/workflows/: apk.yml  ios-app.yml  master.yml
screens/: AppButton.kv  CalendarDay.kv  CustomDropDown.py  Home.kv  Home.py  LoadingScreen.py  LoginScreen.kv  LoginScreen.py  SettingsScreen.kv  SignUpWithEmail.kv  SignUpWithEmail.py  StartingScreen.kv  StartingScreen.py  WhatAreYourGoals.kv  WhatAreYourGoals.py  WhatIsYourHeight.kv  WhatIsYourHeight.py  WhatIsYourLevel.kv  WhatIsYourLevel.py  WhatIsYourName.kv  WhatIsYourName.py  WhatIsYourWeight.kv  WhatIsYourWeight.py  main.kv
sources/: User.py
styles/: styles.kv
widgets/: AddWorkout.py  AddWorkoutBottomSheet.py  AppButton.kv  Calendar.kv  Calendar.py  CalendarDay.kv  CalendarDay.py  CustomDropDown.kv  Home.kv  Home.py  NumField.kv  NumField.py  SettingsScreen.kv  SettingsScreen.py  SignUpWithEmail.kv  SignUpWithEmail.py  StartingScreen.kv  StartingScreen.py  UserSettings.kv  UserSettings.py  WhatAreYourGoals.kv  WhatIsYourHeight.kv  WhatIsYourHeight.py  WhatIsYourWeight.kv  WhatIsYourWeight.py  WorkoutItem.py  main.kv  main2.kv
widgets/__pycache__/: FloatingPlusButton.py
