[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "workouttracker"
version = "0.1.0"
[tool.poetry.dependencies]
Brotli = "^1.0.9"
Cython = "^0.29.24"
HTMLParser = "^0.0.2"
Kivy = "^2.1.0"
Pillow = "^8.3.2"
cryptography = "^3.4.8"
django-user = "^0.2.1"
importlib-metadata = "^4.8.1"
keyring = "^23.2.1"
kivymd = "^0.104.2"
lockfile = "^0.12.2"
lxml = "^4.6.3"
numpy = "^1.22.2"
ordereddict = "^1.1"
python = "^3.8"
python-ntlm = "^1.1.0"
toml = "^0.10.2"
tornado = "^6.1"
watchdog = "^2.1.5"
zipp = "^3.5.0"
[tool.poetry.dev-dependencies]
