[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "workouttracker"
version = "0.1.0"
[tool.poetry.dependencies]
Cython = "^0.29.24"
Kivy = "^2.1.0"
Pillow = "^8.3.2"
kivymd = "^0.104.2"
ordereddict = "^1.1"
python = "^3.8"
python-ntlm = "^1.1.0"
toml = "^0.10.2"
[tool.poetry.dev-dependencies]
