[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "workouttracker"
version = "0.1.0"
[tool.poetry.dependencies]
Cython = "^0.29.24"
Kivy = "^2.1.0"
Pillow = "^8.3.2"
kivymd = "^0.104.2"
pymongo = "^4.1.1"
python = "^3.8"
toml = "^0.10.2"
importlib-metadata = "^4.11.4"
lockfile = "^0.12.2"
HTMLParser = "^0.0.2"
python-ntlm = "^1.1.0"
Brotli = "^1.0.9"
zipp = "^3.8.0"
cryptography = "^37.0.2"
lxml = "^4.9.0"
keyring = "^23.6.0"
ordereddict = "^1.1"
tornado = "^6.1"
[tool.poetry.dev-dependencies]
